--- a/historiascorporativas/index.html
+++ b/historiascorporativas/index.html
@@ -12,7 +12,7 @@
 		<li> <a href = ""> A gazela e o leão </li>
 		<li> <a href = ""> Chefe e Funcionários </li>
 		<li> <a href = ""> O corvo e o coelho </li>
-		<li><a href = ""> Não mexa no jabuti </li>
+		<li><a href = ""> Nãoo mexa no jabuti </li>
 	</ul>
 </body>
 </html>
