--- a/historiascorporativas/corvocoelho.html
+++ b/historiascorporativas/corvocoelho.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html> <!--complete o que falta nas tags-->
-<head>
-	<title>O CORVO E O COELHO</title>
-	<meta charset=""> 
-	<meta name="" content="">
-	<link rel="stylesheet" href="style.css">
-</head>
-	<body>
-		<h1>O CORVO E O COELHO</h1>
-		<p>Um corvo está sentado numa árvore o dia inteiro sem fazer nada. Um pequeno coelho vê o corvo e pergunta: </p>
-		<p>"Eu posso sentar como você e não fazer nada o dia inteiro?" </p>
-		<p>O corvo responde: "Claro, porque não?" </p>
-		<p>O coelho senta no chão, embaixo da árvore, e relaxa. De repente uma raposa aparece e come o coelho. </p>
+<html lang="pt-br"> <!--complete o que falta nas tags-->
 
-		<p>Moral da história: </p>
-		<p>Para ficar sentado sem fazer nada, você deve estar sentado bem no alto. </p>
-		<img src="">
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>O CORVO E O COELHO</title>
+</head>
+
+<body>
+	<h1>O CORVO E O COELHO</h1>
+	<p>Um corvo está sentado numa árvore o dia inteiro sem fazer nada. Um pequeno coelho vê o corvo e pergunta: </p>
+	<p>"Eu posso sentar como você e não fazer nada o dia inteiro?" </p>
+	<p>O corvo responde: "Claro, porque não?" </p>
+	<p>O coelho senta no chão, embaixo da árvore, e relaxa. De repente uma raposa aparece e come o coelho. </p>
+
+	<p>Moral da história: </p>
+	<p>Para ficar sentado sem fazer nada, você deve estar sentado bem no alto. </p>
+	<img src="corvoraposa.JPG" alt="corvo e raposa">
+</body>
+
 </html>
