--- a/historiascorporativas/index.html
+++ b/historiascorporativas/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
+
 <head>
-	<title>Lições Corporativas... </title>
-	<meta charset = "utf-8">
-	<link rel="stylesheet" href="">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>HISTÓRIAS CORPORATIVAS</title>
 </head>
+
 <body>
 	<h1>HISTÓRIAS CORPORATIVAS </h1>
 	<ul>
-		<li> <a href = ""> O galo, o gato e o ratinho </li>
-		<li> <a href = ""> A gazela e o leão </li>
-		<li> <a href = ""> Chefe e Funcionários </li>
-		<li> <a href = ""> O corvo e o coelho </li>
-		<li><a href = ""> Nãoo mexa no jabuti </li>
+		<li> <a href=""> O galo, o gato e o ratinho </li>
+		<li> <a href=""> A gazela e o leão </li>
+		<li> <a href=""> Chefe e Funcionários </li>
+		<li> <a href=""> O corvo e o coelho </li>
+		<li> <a href=""> Nãoo mexa no jabuti </li>
 	</ul>
 </body>
+
 </html>
