--- a/historiascorporativas/jabuti.html
+++ b/historiascorporativas/jabuti.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html> <!--complete o que falta nas tags-->
-<head>
-	<title>O gato, o galo e o ratinho</title>
-	<meta charset=""> 
-	<meta name="" content="">
-	<link rel = "stylesheet" href = "style.css">
-</head>
-	<body>
-		<h1>NÃO MEXA NOS JABUTIS</h1>
-		<p>Depois de nadar vários dias, um homem foi parar em uma praia. Exausto, dormiu. No dia seguinte, ao procurar comida, viu um jabuti em cima de uma árvore. Como sabia que esse animal não sobe em árvores, resolveu ajuda-lo. Antes mesmo de conseguir tocar no bicho, morreu com uma flechada nas costas. </p>
-		
-		<p>Moral da história: </p>
-		<p>Se existem jabutis onde você trabalha, não mexa neles. Afinal, alguém os colocou lá. </p>
+<html lang="pt-br">
 
-		<img src = "">
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>NÃO MEXA NOS JABUTIS</title>
+</head>
+
+<body>
+	<h1>NÃO MEXA NOS JABUTIS</h1>
+	<p>Depois de nadar vários dias, um homem foi parar em uma praia. Exausto, dormiu. No dia seguinte, ao procurar
+		comida, viu um jabuti em cima de uma árvore. Como sabia que esse animal não sobe em árvores, resolveu ajuda-lo.
+		Antes mesmo de conseguir tocar no bicho, morreu com uma flechada nas costas. </p>
+
+	<p>Moral da história: </p>
+	<p>Se existem jabutis onde você trabalha, não mexa neles. Afinal, alguém os colocou lá. </p>
+
+	<img src="jabuti.PNG" alt="jabuti">
+</body>
+
 </html>
