--- a/chefefuncionario.html
+++ b/chefefuncionario.html
@@ -23,7 +23,7 @@
 
 	<p>Moral da história: </p>
 	<p>Deixe sempre o seu chefe falar primeiro. </p>
-	<img src="chefefuncionario.JPG" alt="chefe e os funcionarios">
+	<img src="img/chefefuncionario.JPG" alt="chefe e os funcionarios">
 </body>
 
 </html>
