--- a/jabuti.html
+++ b/jabuti.html
@@ -18,7 +18,7 @@
 	<p>Moral da história: </p>
 	<p>Se existem jabutis onde você trabalha, não mexa neles. Afinal, alguém os colocou lá. </p>
 
-	<img src="jabuti.PNG" alt="jabuti">
+	<img src="img/jabuti.PNG" alt="jabuti">
 </body>
 
 </html>
