--- a/gazelaleao.html
+++ b/gazelaleao.html
@@ -17,7 +17,7 @@
 
 	<p>Moral da história: </p>
 	<p>Não faz diferença se você é gazela ou leão, quando o sol nascer você deve começar a correr. </p>
-	<img src="gazelaleao.PNG" alt="gazela e leao">
+	<img src="img/gazelaleao.JPG" alt="gazela e leao">
 </body>
 
 </html>
