--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
 	<h1>HISTÓRIAS CORPORATIVAS </h1>
 	<ul>
-		<button></button>
-		<li> <a href=""> O galo, o gato e o ratinho </li>
+		<button class=""><a href="galogatoratinho.html">O galo, o gato e o ratinho</a></button>
 		<li> <a href=""> A gazela e o leão </li>
 		<li> <a href=""> Chefe e Funcionários </li>
 		<li> <a href=""> O corvo e o coelho </li>
