--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	<h1>HISTÓRIAS CORPORATIVAS </h1>
 	<ul>
 		<button class=""><a href="galogatoratinho.html">O galo, o gato e o ratinho</a></button>
-		<li> <a href=""> A gazela e o leão </li>
-		<li> <a href=""> Chefe e Funcionários </li>
-		<li> <a href=""> O corvo e o coelho </li>
-		<li> <a href=""> Nãoo mexa no jabuti </li>
+		<button class=""><a href="gazelaleao.html">A gazela e o leão</a></button>
+		<button class=""><a href="chefefuncionario.html">Chefe e Funcionários</a></button>
+		<button class=""><a href="corvocoelho.html"> O corvo e o coelho</a></button>
+		<button class=""><a href="jabuti.html">Nãoo mexa no jabuti</a></button>
 	</ul>
 </body>
 
