--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<button class=""><a href="gazelaleao.html">A gazela e o leão</a></button>
 		<button class=""><a href="chefefuncionario.html">Chefe e Funcionários</a></button>
 		<button class=""><a href="corvocoelho.html"> O corvo e o coelho</a></button>
-		<button class=""><a href="jabuti.html">Nãoo mexa no jabuti</a></button>
+		<button class=""><a href="jabuti.html">Não mexa no jabuti</a></button>
 	</ul>
 </body>
 
