--- a/galogatoratinho.html
+++ b/galogatoratinho.html
@@ -22,7 +22,7 @@
 
 	<p class="pmoral">Moral: </p>
 	<p> Jamais confie nas aparências.</p>
-	<img src="img/galogatoratinho.JPG" alt="galo e gato e ratinho">
+	<img src="img/galogatoratinho.JPG" alt="galo e gato e ratinho" class="imgfabula">
 </body>
 
 </html>
