--- a/gazelaleao.html
+++ b/gazelaleao.html
@@ -18,6 +18,8 @@
 	<p>Moral da história: </p>
 	<p>Não faz diferença se você é gazela ou leão, quando o sol nascer você deve começar a correr. </p>
 	<img src="img/gazelaleao.JPG" alt="gazela e leao" class="imgfabula">
+
+	<button><a href="index.html">VOLTAR</a></button>
 </body>
 
 </html>
