--- a/chefefuncionario.html
+++ b/chefefuncionario.html
@@ -24,6 +24,8 @@
 	<p>Moral da história: </p>
 	<p>Deixe sempre o seu chefe falar primeiro. </p>
 	<img src="img/chefefuncionario.JPG" alt="chefe e os funcionarios" class="imgfabula">
+
+	<button><a href="index.html">VOLTAR</a></button>
 </body>
 
 </html>
