--- a/galogatoratinho.html
+++ b/galogatoratinho.html
@@ -23,6 +23,8 @@
 	<p class="pmoral">Moral: </p>
 	<p> Jamais confie nas aparências.</p>
 	<img src="img/galogatoratinho.JPG" alt="galo e gato e ratinho" class="imgfabula">
+
+	<button><a href="index.html">VOLTAR</a></button>
 </body>
 
 </html>
